...
        android:id="@+id/img_avatar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:transitionName="@string/transitionImage"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
...
